--- a/.classpath
+++ b/.classpath
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/itextpdf-5.5.13-sources.jar"/>
-	<classpathentry kind="lib" path="lib/itextpdf-5.5.13.jar"/>
-	<classpathentry kind="lib" path="lib/jcalendar-1.3.3.jar"/>
-	<classpathentry kind="lib" path="lib/jdatepicker-1.3.4-sources.jar"/>
-	<classpathentry kind="lib" path="lib/jdatepicker-1.3.4.jar"/>
-	<classpathentry kind="lib" path="lib/jxl-2.6.12-sources.jar"/>
-	<classpathentry kind="lib" path="lib/jxl-2.6.12.jar"/>
-	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.30-bin.jar"/>
-	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.12.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="lib/itextpdf-5.5.13-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/itextpdf-5.5.13.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jcalendar-1.3.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jdatepicker-1.3.4-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jdatepicker-1.3.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jxl-2.6.12-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jxl-2.6.12.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.1.30-bin.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-8.0.12.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
